namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-assessments-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-assessments-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-assessments-dev"
    cloud-platform.justice.gov.uk/application: "Assess risks and needs"
    cloud-platform.justice.gov.uk/owner: "Assess risks and needs: assess-risks-and-needs@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-assessments-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-assessments"
